hello deploy from dev branch gh pages deployable branch test

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://muratonay1.github.io/react-deploy-test",
+  "homepage": "https://muratonay1.github.io/react-deploy-test/",
   "name": "react-deploy-test",
   "version": "0.1.0",
   "private": true,
